--- a/templates/result.html
+++ b/templates/result.html
@@ -20,6 +20,8 @@
                     {% endif %}
                     Review Count: {{ business['Review Count'] }}
                     <br>
+                    Website: {{ business['web'] }}
+                    <br>
                     Phone: {{ business['Phone'] }}
                     <br>
                     Distance: {{ business['Distance']|round }} km
