--- a/templates/result.html
+++ b/templates/result.html
@@ -20,7 +20,7 @@
                     {% endif %}
                     Review Count: {{ business['Review Count'] }}
                     <br>
-                    Website: {{ business['web'] }}
+                    Website: {{ ['Profile Info']['web'] }}
                     <br>
                     Phone: {{ business['Phone'] }}
                     <br>
