--- a/templates/result.html
+++ b/templates/result.html
@@ -22,7 +22,7 @@
                     <br>
                     Phone: {{ business['Phone'] }}
                     <br>
-                    Distance: {{ business['Distance']|round }} km
+                    Distance: {{ business['Distance'] }} km
                     <br>
                     {% if business['Transactions'] %}
                         Transactions: {{ ', '.join(business['Transactions']) }}
