--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,6 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,30 +15,27 @@ h1 {
     color: #333;
 }
 
-form {
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.card {
     max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
+    width: 100%;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-label {
-    display: block;
-    margin-bottom: 8px;
-}
-
-input,
-button,
-select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
     box-sizing: border-box;
+    margin-bottom: 20px;
+    padding: 20px;
 }
 
-button {
+.card strong {
+    color: #333;
+}
+
+.card button {
     background-color: #4caf50;
     color: white;
     border: none;
@@ -52,35 +48,32 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.card button:hover {
     background-color: #45a049;
 }
 
-ul {
+.card ul {
     list-style: none;
     padding: 0;
+    margin-top: 10px;
 }
 
-li {
-    margin-bottom: 20px;
+.card li {
+    margin-bottom: 10px;
 }
 
-a {
+.card a {
     color: #1e88e5;
     text-decoration: none;
 }
 
-a:hover {
+.card a:hover {
     text-decoration: underline;
-}
-
-p {
-    margin: 20px 0;
 }
 
 /* Responsive styles */
 @media (max-width: 768px) {
-    form {
+    .card {
         margin: 20px;
     }
 }
