--- a/templates/result.html
+++ b/templates/result.html
@@ -36,7 +36,7 @@
                     <br>
                 {% endif %}
                 {% if business['Profile Info']['Website'] %}
-                    <a href="{{ business['Profile Info']['Website'] }}" target="_blank">View Website</a>
+                    <a href="http://{{ business['Profile Info']['Website'] }}" target="_blank">View Website</a>
                     <br>
                 {% endif %}
 
